    - Blue algae liquefaction recipe moved from Oil Refinery to Oil and Gas Separator
    - Electric Engines no longer require blue science
    - Prerequisite Chemical processing 1 removed from Steel processing
    - Enriched fuel block fuel value increased from 24MJ to 50MJ
    - Added setting for preferred landfill type (if LandfillPainting is installed)
    - Merged in A Sea Block Config mod
  Bugfixes:
    - Fixed missing icon "liquid-multi-phase-oil.png"
    - Removed coal and crushed coal
    - Moved recipes for Sulfur and Sulfur dioxide gas back to Sulfur processing 1
    - Added missing science packs to Logistics System 3, Logistics Warehouses, and Logistics Silos
    - Added Thermal Water Extraction as a prerequisite for Fish Pressing
    - Fixed lab icon on Sacrificial electromagnet technology (if Science Cost Tweaker is installed)
---------------------------------------------------------------------------------------------------
Version: 0.4.8
Date: 18. 8. 2020
  Changes:
    - Extra check for crash site disable remote call
---------------------------------------------------------------------------------------------------
Version: 0.4.7
Date: 18. 8. 2020
  Changes:
    - Disable factorio 1.0 crash landing freeplay start
    - Always enable kovarex enrichment tech
    - Redundant normal/expensive recipe handling
---------------------------------------------------------------------------------------------------
Version: 0.4.6
Date: 5. 7. 2020
  Changes:
    - Check autoplace controls are unused before removing
---------------------------------------------------------------------------------------------------
Version: 0.4.5
Date: 30. 5. 2020
  Changes:
    - Adjust blue algae tech requirements back down to green science
    - Add thermal water recipe for use with thermal bore
    - Move jivolite and crotinum ore crystallization unlocks to Advanced mechanical refining